tests/neg-custom-args/captures/i21920.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21920.scala:34:35 ---------------------------------------
34 |  val cell: Cell[File] = File.open(f => Cell(() => Seq(f))) // error
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (f: File^?) ->? Cell[File^?]{val head: () ->? IterableOnce[File^?]^?}^?
   |Required: File^ => Cell[File^?]{val head: () ->? IterableOnce[File^?]^?}^?
   |
   |where:    => refers to a fresh root capability created in value cell when checking argument to parameter f of method open
   |          ^  refers to the universal root capability
   |
   |Note that capability <cap of (): IterableOnce[File^?]^> cannot be included in outer capture set ?.
   |
   | longer explanation available when compiling with `-explain`
